<resources>
    <string name="app_name">LoginRegister</string>
    <string name="btn_add">add product</string>
    <string name="btn_remove">remove product</string>
    <string name="cantitate">Amount: </string>

    <string name="nameProdus1">Apple</string>
    <string name="price1">Price: 2$</string>

    <string name="nameProdus2">Tomato</string>
    <string name="price2">Price: 3$</string>

    <string name="nameProdus3">Pear</string>
    <string name="price3">Price: 1$</string>

    <string name="nameProdus4">Potato</string>
    <string name="price4">Price: 2$</string>

    <string name="nameProdus5">Grapes</string>
    <string name="price5">Price: 3$</string>


    <string name="cosulCumparaturi">Shopping basket</string>

</resources>