<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context="com.example.AplicatieCM.ProduseActivity">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <ImageView
            android:id="@+id/imageApple"
            android:layout_width="152dp"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:scaleType="fitStart"
            android:src="@drawable/apple" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">


            <TextView
                android:id="@+id/nameProdus1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:text="@string/nameProdus1"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#383838"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:ignore="DuplicateIds" />

            <TextView
                android:id="@+id/pretProdus1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:text="@string/price1"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#313131"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/cantitateP1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:text="@string/cantitate"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#313131"
                android:textSize="15sp" />

            <Button
                android:id="@+id/addP1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btn_add" />

            <Button
                android:id="@+id/removeP1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btn_remove" />


        </LinearLayout>


    </LinearLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <ImageView
            android:layout_width="152dp"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:scaleType="fitStart"
            android:src="@drawable/tomato" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">


            <TextView
                android:id="@+id/nameProdus2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:text="@string/nameProdus2"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#383838"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/pretProdus2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:text="@string/price2"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#313131"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/cantitateP2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:text="@string/cantitate"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#313131"
                android:textSize="15sp" />

            <Button
                android:id="@+id/addP2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btn_add" />

            <Button
                android:id="@+id/removeP2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btn_remove" />


        </LinearLayout>



    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <ImageView
            android:layout_width="152dp"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:scaleType="fitStart"
            android:src="@drawable/pear" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">


            <TextView
                android:id="@+id/nameProdus3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:text="@string/nameProdus3"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#383838"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/pretProdus3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:text="@string/price3"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#313131"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/cantitateP3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:text="@string/cantitate"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#313131"
                android:textSize="15sp" />

            <Button
                android:id="@+id/addP3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btn_add" />

            <Button
                android:id="@+id/removeP3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btn_remove"/>


        </LinearLayout>



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <ImageView

            android:layout_width="152dp"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:scaleType="fitStart"
            android:src="@drawable/potato" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">


            <TextView
                android:id="@+id/nameProdus4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:text="@string/nameProdus4"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#383838"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/pretProdus4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:text="@string/price4"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#313131"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/cantitateP4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:text="@string/cantitate"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#313131"
                android:textSize="15sp" />

            <Button
                android:id="@+id/addP4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btn_add" />

            <Button
                android:id="@+id/removeP4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btn_remove" />


        </LinearLayout>



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <ImageView
            android:id="@+id/image"
            android:layout_width="152dp"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:scaleType="fitStart"
            android:src="@drawable/grapes" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">


            <TextView
                android:id="@+id/nameProdus5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:text="@string/nameProdus5"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#383838"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/pretProdus5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:text="@string/price5"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#313131"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/cantitateP5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:text="@string/cantitate"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#313131"
                android:textSize="15sp" />

            <Button
                android:id="@+id/addP5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btn_add" />

            <Button
                android:id="@+id/removeP5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btn_remove" />


        </LinearLayout>


    </LinearLayout>

    <Button
        android:id="@+id/cosCumparaturi"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/cosulCumparaturi"
        android:textSize="20sp" />

</LinearLayout>


</ScrollView>